Config i18n to datepicker and adjust validation

--- a/alelo/assets/js/lang/en.json
+++ b/alelo/assets/js/lang/en.json
@@ -116,6 +116,12 @@
       "end date": {
         "after": "Start Date should not be before End Date"
       }
+    },
+    "attributes": {
+      "title": "Title",
+      "summary": "Summary",
+      "start date": "Start Date",
+      "end date": "End Date"
     }
   }
 }
