New class wizard: Build the students form

--- a/alelo/assets/js/lang/en.json
+++ b/alelo/assets/js/lang/en.json
@@ -63,6 +63,9 @@
   "coursesForm": {
     "infoText": "Check courses to include in your class (you can edit your selections later)"
   },
+  "studentsForm": {
+    "infoText": "Enter email addresses separated by a common or space. You may also copy ans parse a list into the box"
+  },
   "setting": {
     "profile": "Profile",
     "save": "Save",
