--- a/alelo/assets/js/lang/en.json
+++ b/alelo/assets/js/lang/en.json
@@ -66,6 +66,10 @@
   "studentsForm": {
     "infoText": "Enter email addresses separated by a common or space. You may also copy ans parse a list into the box"
   },
+  "wizardButtons": {
+    "back": "Back",
+    "review": "Review"
+  },
   "setting": {
     "profile": "Profile",
     "save": "Save",
