New class wizard: Review form

--- a/alelo/assets/js/lang/en.json
+++ b/alelo/assets/js/lang/en.json
@@ -68,7 +68,15 @@
   },
   "wizardButtons": {
     "back": "Back",
-    "review": "Review"
+    "review": "Review",
+    "confirm": "Confirm"
+  },
+  "reviewForm": {
+    "classTitle": "Class Title",
+    "classDates": "Class Dates",
+    "includedCourses": "Included Courses",
+    "studentInvited": "Student Invited",
+    "infoText": "Click “confirm” to create your class. To make changes, click on a heading above, or use the back arrow"
   },
   "setting": {
     "profile": "Profile",
