update ui form create new class

--- a/alelo/assets/js/lang/en.json
+++ b/alelo/assets/js/lang/en.json
@@ -68,7 +68,7 @@
     "addEndDate": "Add an End Date."
   },
   "coursesForm": {
-    "infoText": "Check courses to include in your class (you can edit your selections later)"
+    "infoText": "Check courses to include in your class (you can edit your selections later)."
   },
   "studentsForm": {
     "infoText": "Enter email addresses separated by a common or space. You may also copy ans parse a list into the box"
