Issue 76: Add email validation into email input. Issue 77: Change the submit params course

--- a/alelo/assets/js/lang/en.json
+++ b/alelo/assets/js/lang/en.json
@@ -71,7 +71,10 @@
     "infoText": "Check courses to include in your class (you can edit your selections later)."
   },
   "studentsForm": {
-    "infoText": "Enter email addresses separated by a common or space. You may also copy ans parse a list into the box."
+    "infoText": "Enter email addresses separated by a common or space. You may also copy ans parse a list into the box.",
+    "invalidEmail": "The email {emails} {beVerb} invalid",
+    "is": "is",
+    "are": "are"
   },
   "wizardButtons": {
     "back": "Back",
