fixed_issue_ui: fixed issue UI

--- a/alelo/assets/js/lang/en.json
+++ b/alelo/assets/js/lang/en.json
@@ -57,7 +57,8 @@
   "progressBarForm": {
     "information": "Information",
     "courses": "Courses",
-    "students": "Students"
+    "students": "Students",
+    "review": "Review"
   },
   "informationForm": {
     "selectInstitution": "Select your institution.",
