--- a/alelo/assets/js/lang/en.json
+++ b/alelo/assets/js/lang/en.json
@@ -153,7 +153,10 @@
   "validations": {
     "custom": {
       "end date": {
-        "after": "Start Date should not be before End Date"
+        "after": "End Date should not be before Start Date"
+      },
+      "start date": {
+        "after": "Start Date should not be before today"
       }
     },
     "attributes": {
