issue_103: Change the footer

--- a/alelo/assets/js/lang/en.json
+++ b/alelo/assets/js/lang/en.json
@@ -13,7 +13,8 @@
       "copyRight": "Copyright 2021 Alelo Inc. All rights reserved.",
       "playLearnCommunicate": "Play. Learn. Communicate.",
       "contactUs": "Contact Us",
-      "legal": "Legal"
+      "privacyPolicy": "Privacy Policy",
+      "termsService": "Terms of Service"
     },
     "noticeHeader": "Notice"
   },
