Issue 124, 125 Create/Edit Class -- Add ability for instructor to type date

--- a/alelo/assets/js/lang/en.json
+++ b/alelo/assets/js/lang/en.json
@@ -64,6 +64,7 @@
   },
   "informationForm": {
     "selectInstitution": "Select your institution.",
+    "yourInstitution": "Your institution.",
     "institution": "Institution",
     "note": "Note: This class will be archived after the end date.",
     "addTitle": "Add a title for your class.",
