Update the resend invitation message

--- a/alelo/assets/js/lang/en.json
+++ b/alelo/assets/js/lang/en.json
@@ -153,8 +153,7 @@
   },
   "resendInvitation": {
     "headerText": "Resend Invitation",
-    "introText": "You are about to resend an invitation to the following student(s):",
-    "infoText": "Invitations will be sent to selected students. If a student has already accepted an invitation, a new invitation will not be sent.",
+    "introText": "Invitations will be sent to the selected students.",
     "confirmText": "Resend Invitation?",
     "buttonText": "Yes, Resend"
   },
@@ -164,7 +163,7 @@
         "after": "Start Date should not be before End Date"
       },
       "start date": {
-        "after": "Start Date should not be before today"
+        "after": "Start Date should not be before Today"
       }
     },
     "attributes": {
