--- a/alelo/assets/js/lang/en.json
+++ b/alelo/assets/js/lang/en.json
@@ -20,6 +20,7 @@
   },
   "classList": {
     "summary": "Summary",
+    "description": "Description",
     "createClass": "Create A New Class"
   },
   "classDetail": {
