--- a/alelo/assets/js/lang/es.json
+++ b/alelo/assets/js/lang/es.json
@@ -18,6 +18,7 @@
   },
   "classList": {
     "summary": "Summary",
+    "description": "Description",
     "createClass": "Create A New Class"
   },
   "classDetail": {
