--- a/alelo/assets/js/lang/es.json
+++ b/alelo/assets/js/lang/es.json
@@ -10,8 +10,8 @@
     "welcome": "Bienvenido",
     "logOut": "Cerrar sesión",
     "footer": {
-      "copyRight": "Copyright 2021 Alelo Inc. All rights reserved.",
-      "playLearnCommunicate": "Play. Learn. Communicate.",
+      "copyRight": "Copyright 2022 Alelo Inc. All rights reserved.",
+      "slogan": "Habilidades aplicables a la vida real. Realmente rápido.",
       "contactUs": "Contact Us",
       "legal": "Legal"
     }
