--- a/alelo/assets/js/lang/pt.json
+++ b/alelo/assets/js/lang/pt.json
@@ -10,8 +10,8 @@
     "welcome": "Bem-vinda",
     "logOut": "Sair",
     "footer": {
-      "copyRight": "Copyright 2021 Alelo Inc. All rights reserved.",
-      "playLearnCommunicate": "Play. Learn. Communicate.",
+      "copyRight": "Copyright 2022 Alelo Inc. All rights reserved.",
+      "slogan": "Habilidades para o mundo real. Realmente Rápido.",
       "contactUs": "Contact Us",
       "legal": "Legal"
     }
