--- a/alelo/assets/js/lang/cn.json
+++ b/alelo/assets/js/lang/cn.json
@@ -10,8 +10,8 @@
     "welcome": "欢迎",
     "logOut": "登出",
     "footer": {
-      "copyRight": "Copyright 2021 Alelo Inc. All rights reserved.",
-      "playLearnCommunicate": "Play. Learn. Communicate.",
+      "copyRight": "Copyright 2022 Alelo Inc. All rights reserved.",
+      "slogan": "快速学会现实世界的实用技能。",
       "contactUs": "Contact Us",
       "legal": "Legal"
     }
